syntax = "proto3";
package eqs;

service Inclusion {
    rpc GetKeccakInclusion(GetKeccakInclusionRequest) returns (GetKeccakInclusionResponse);
}
message GetKeccakInclusionRequest {
    bytes commitment = 1;  // 32 byte blob commitment
    bytes namespace = 2;   // 32 byte namespace
    uint64 height = 3;     // block height
}

message GetKeccakInclusionResponse {
    enum Status {
        WAITING = 0;
        IN_PROGRESS = 1;
        COMPLETE = 2;
        FAILED = 3;
    }
    Status status = 1;
    oneof response_value {
        bytes proof_id = 2;    // Used when status is IN_PROGRESS, this is the proof id of the prover network
        bytes proof = 3;        // Used when status is COMPLETE
        string error_message = 4;       // Used when status is FAILED
        string status_message = 5;       // Used when status is WAITING, this is the status message of the prover network
    }
}